[workspace]
members = [
#    "rpc-core",
    "rpc",
    "storage-adapter",
    "storage-hbase",
    "storage-bigtable",
    "storage-bigtable/build-proto",
    "storage-proto",
#    "launcher",
    "net-utils",
    "metrics",
    "perf"
]

exclude = []

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "2.0.0"
authors = ["Aurimas Narkevicius <aurimas.n@dexterlab.com>"]
repository = "https://github.com/dexterlaboss/archival-rpc"
homepage = "https://dexterlab.com/"
license = "AGPL-3.0-only"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.68"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.21.2"
bincode = "1.3.3"
#borsh = "0.10.3"
bs58 = "0.4.0"
bytes = "1.2"
bzip2 = "0.4.4"
clap = "2.33.1"
console = "0.15.7"
crossbeam-channel = "0.5.8"
enum-iterator = "1.4.1"
#env_logger = "0.9.3"
fd-lock = "3.0.12"
flate2 = "1.0.26"
futures = "0.3.28"
goauth = "0.13.1"
http = "0.2.9"
hyper = "0.14.26"
hyper-proxy = "0.9.1"
#indicatif = "0.17.4"
Inflector = "0.11.4"
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-server-utils = "18.0"
prometheus = "0.13.4"
lazy_static = "1.4.0"
libc = "0.2.144"
log = "0.4.17"
matches = "0.1.10"
num_cpus = "1.15.0"
#num_enum = "0.6.1"
openssl = "0.10"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
rayon = "1.7.0"
rustc_version = "0.4"
#rustls = { version = "0.20.8", default-features = false }
#rustversion = "1.0.12"
#semver = "1.0.17"
serde = "1.0.163"
serde_bytes = "0.11.9"
serde_derive = "1.0.103"
serde_json = "1.0.96"
serde_with = { version = "2.3.3", default-features = false }
signal-hook = "0.3.15"
smpl_jwt = "0.7.1"
md5 = "0.7"
memcache = "0.17.2"

#solana-account-decoder = "=2.2.0"
solana-clap-utils = "=2.2.0"
#solana-clap-v3-utils = "=2.0.5"
solana-logger = "=2.2.1"
#solana-rayon-threadlimit = "=2.0.5"
solana-rpc-client-api = "=2.2.0"
#solana-sdk = "=2.2.1"
#solana-send-transaction-service = "=2.2.0"
#solana-storage-proto = "=2.0.5"
#solana-transaction-data = { path = "transaction-data", version = "=2.0.5" }
#solana-transaction-status = { path = "transaction-status", version = "=2.0.5" }
#solana-transaction-data = "1.16.15"
solana-transaction-status = "=2.2.0"
solana-version = "=2.2.0"

solana-clock = "=2.2.1"
solana-validator-exit = "=2.2.1"
solana-commitment-config = "=2.2.1"
solana-pubkey = "=2.2.1"
solana-signature = "=2.2.1"
solana-message = "=2.2.1"
solana-serde = "=2.2.1"
solana-transaction = "=2.2.1"
solana-transaction-error = "=2.2.1"
solana-transaction-context = { version = "=2.2.1", features = ["serde"] }
solana-sysvar = "=2.2.1"
solana-time-utils = "=2.2.1"
solana-hash = "=2.2.1"
solana-instruction = "=2.2.1"
solana-reward-info = "=2.2.1"

solana-account-decoder-client-types = "=2.2.0"
solana-transaction-status-client-types = "=2.2.0"


solana-metrics = { path = "metrics" }
solana-net-utils = { path = "net-utils" }
solana-perf = { path = "perf" }
solana-rpc = { path = "rpc" }
solana-storage-adapter = { path = "storage-adapter" }
solana-storage-bigtable = { path = "storage-bigtable" }
solana-storage-hbase = { path = "storage-hbase" }
solana-storage-proto = { path = "storage-proto" }

spl-memo = "=3.0.1"
symlink = "0.1.0"
sys-info = "0.9.1"
#sysctl = "0.4.6"
#systemstat = "0.2.3"
#tar = "0.4.38"
#tarpc = "0.29.0"
#tempfile = "3.5.0"
#test-case = "2.2.2"
thiserror = "1.0.40"
#tokio = "1.14.1"
#tokio = { version = "~1.42.0", features = ["full"] }
tokio = { version = "1.43.0", features = ["full"] }
#tokio = { version = "~1.14.1", features = ["full"] }
tokio-serde = "0.8"
#tokio-util = "0.6"
tokio-util = { version = "0.7", features = ["io"] }
tonic = "0.8.3"
tonic-build = "0.8.4"
zstd = "0.11.2"
url = "2.3.1"
nix = "0.26.2"
caps = "0.5.5"
chrono = "0.4.38"
#async-compression = "0.3.15"
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }
hdfs-native = "0.11"
anyhow = "1.0"
hbase-thrift = "1.1.0"
#thrift = "0.15.0"
thrift = "0.17.0"

dexter-ipfs-car = "0.3.0"

[patch.crates-io]
# for details, see https://github.com/solana-labs/crossbeam/commit/fd279d707025f0e60951e429bf778b4813d1b6bf
crossbeam-epoch = { git = "https://github.com/solana-labs/crossbeam", rev = "fd279d707025f0e60951e429bf778b4813d1b6bf" }

# Rust 1.69+ broke ntapi v0.3.x, which doesn't contain proper fix:
#   https://github.com/MSxDOS/ntapi/pull/12
ntapi = { git = "https://github.com/solana-labs/ntapi", rev = "97ede981a1777883ff86d142b75024b023f04fad" }
