[workspace]
members = [
#    "rpc-core",
    "rpc",
    "storage-adapter",
    "storage-hbase",
    "storage-bigtable",
    "storage-bigtable/build-proto",
    "storage-proto",
#    "launcher",
    "net-utils",
    "metrics",
    "perf"
]

exclude = []

# This prevents a Travis CI error when building for Windows.
resolver = "2"

[workspace.package]
version = "3.0.0"
authors = ["Aurimas Narkevicius <aurimas.n@dexterlab.com>"]
repository = "https://github.com/dexterlaboss/archival-rpc"
homepage = "https://dexterlab.com/"
license = "AGPL-3.0-only"
edition = "2021"

[workspace.dependencies]
async-trait = "0.1.68"
backoff = { version = "0.4.0", features = ["tokio"] }
base64 = "0.21.2"
bincode = "1.3.3"
bs58 = "0.4.0"
bytes = "1.2"
bzip2 = "0.4.4"
clap = "2.33.1"
console = "0.15.7"
crossbeam-channel = "0.5.8"
enum-iterator = "1.4.1"
fd-lock = "3.0.12"
flate2 = "1.0.26"
futures = "0.3.28"
goauth = "0.13.1"
http = "0.2.9"
hyper = "0.14.26"
hyper-proxy = "0.9.1"
Inflector = "0.11.4"
jemallocator = { package = "tikv-jemallocator", version = "0.4.1", features = ["unprefixed_malloc_on_supported_platforms"] }
jsonrpc-core = "18.0.0"
jsonrpc-core-client = "18.0.0"
jsonrpc-derive = "18.0.0"
jsonrpc-http-server = "18.0.0"
jsonrpc-server-utils = "18.0"
prometheus = "0.13.4"
lazy_static = "1.4.0"
libc = "0.2.144"
log = "0.4.17"
matches = "0.1.10"
num_cpus = "1.15.0"
openssl = "0.10"
prost = "0.11.9"
prost-types = "0.11.9"
protobuf-src = "1.1.0"
rayon = "1.7.0"
rustc_version = "0.4"
serde = "1.0.163"
serde_bytes = "0.11.9"
serde_derive = "1.0.103"
serde_json = "1.0.96"
serde_with = { version = "2.3.3", default-features = false }
signal-hook = "0.3.15"
smpl_jwt = "0.7.1"
md5 = "0.7"
memcache = "0.17.2"
tar = "0.4.43"
rand = "0.8.5"

solana-logger = "=3.0.0"
solana-rpc-client-api = "=3.0.10"
solana-transaction-status = "=3.0.10"
solana-version = "=3.0.10"

solana-clock = "=3.0.0"
solana-validator-exit = "=3.0.0"
solana-commitment-config = "=3.0.0"
solana-pubkey = "=3.0.0"
solana-signature = "=3.1.0"
solana-message = "=3.0.1"
solana-serde = "=3.0.0"
solana-transaction = "=3.0.1"
solana-transaction-error = "=3.0.0"
solana-transaction-context = { version = "=3.0.10", features = ["serde"] }
solana-sysvar = "=3.0.0"
solana-time-utils = "=3.0.0"
solana-hash = "=3.0.0"
solana-instruction = "=3.0.0"
solana-reward-info = "=3.0.0"
agave-reserved-account-keys = "=3.0.10"

solana-account-decoder-client-types = "=3.0.10"
solana-transaction-status-client-types = "=3.0.10"


solana-metrics = { path = "metrics", version = "=3.0.0" }
solana-net-utils = { path = "net-utils", version = "=3.0.0" }
solana-perf = { path = "perf", version = "=3.0.0" }
solana-rpc = { path = "rpc", version = "=3.0.0" }
solana-storage-adapter = { path = "storage-adapter", version = "=3.0.0" }
solana-storage-bigtable = { path = "storage-bigtable", version = "=3.0.0" }
solana-storage-hbase = { path = "storage-hbase", version = "=3.0.0" }
solana-storage-proto = { path = "storage-proto", version = "=3.0.0" }

spl-memo = "=3.0.1"
symlink = "0.1.0"
sys-info = "0.9.1"
thiserror = "1.0.40"
tokio = { version = "1.43.0", features = ["full"] }
tokio-serde = "0.8"
tokio-util = { version = "0.7", features = ["io"] }
tonic = "0.8.3"
tonic-build = "0.8.4"
zstd = "0.11.2"
url = "2.3.1"
nix = "0.29.0"
caps = "0.5.5"
chrono = "0.4.38"
async-compression = { version = "0.4.18", features = ["tokio", "gzip"] }
hdfs-native = "0.11"
anyhow = "1.0"
hbase-thrift = "1.1.0"
thrift = "0.17.0"

dexter-ipfs-car = "0.3.0"

[dependency-overrides]
solana-sha256-hasher = "=3.0.0"

