[package]
name = "solana-launcher"
description = "Blockchain, Rebuilt for Scale"
documentation = "https://docs.rs/solana-validator"
default-run = "solana-storage-rpc"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
#chrono = { workspace = true, features = ["default", "serde"] }
clap = { workspace = true }
console = { workspace = true }
#core_affinity = { workspace = true }
#crossbeam-channel = { workspace = true }
fd-lock = { workspace = true }
indicatif = { workspace = true }
#itertools = { workspace = true }
#jsonrpc-core = { workspace = true }
#jsonrpc-core-client = { workspace = true, features = ["ipc"] }
#jsonrpc-derive = { workspace = true }
#jsonrpc-server-utils = { workspace = true }
#lazy_static = { workspace = true }
#libloading = { workspace = true }
log = { workspace = true }
#num_cpus = { workspace = true }
#rand = { workspace = true }
#rayon = { workspace = true }
#serde = { workspace = true }
#serde_json = { workspace = true }
#serde_yaml = { workspace = true }
solana-clap-utils = { workspace = true }
#solana-cli-config = { workspace = true }
solana-logger = { workspace = true }
solana-net-utils = { workspace = true }
solana-rpc = { workspace = true }
solana-rpc-core = { workspace = true }
solana-storage-bigtable = { workspace = true }
solana-sdk = { workspace = true }
solana-version = { workspace = true }
symlink = { workspace = true }
#thiserror = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }
signal-hook = { workspace = true }

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
