[package]
name = "solana-metrics"
description = "Solana Metrics"
documentation = "https://docs.rs/solana-net-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
prometheus = { workspace = true }

[lib]
name = "metrics"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
