[package]
name = "solana-net-utils"
description = "Solana Network Utilities"
documentation = "https://docs.rs/solana-net-utils"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
url = { workspace = true }

[lib]
name = "solana_net_utils"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
