[package]
name = "solana-perf"
description = "Solana Performance APIs"
documentation = "https://docs.rs/solana-perf"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
log = { workspace = true }

[target."cfg(target_os = \"linux\")".dependencies]
caps = { workspace = true }
libc = { workspace = true }
nix = { workspace = true, features = ["user"] }

[lib]
name = "solana_perf"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
