[package]
name = "solana-rpc"
description = "Solana RPC"
documentation = "https://docs.rs/solana-rpc"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
#base64 = { workspace = true }
#bincode = { workspace = true }
#bs58 = { workspace = true }
crossbeam-channel = { workspace = true }
#dashmap = { workspace = true }
#itertools = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true }
jsonrpc-derive = { workspace = true }
jsonrpc-http-server = { workspace = true }
jsonrpc-server-utils = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
#rayon = { workspace = true }
#regex = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }
#soketto = { workspace = true }
solana-perf = { workspace = true }
#solana-rayon-threadlimit = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-sdk = { workspace = true }
solana-send-transaction-service = { workspace = true }
solana-storage-hbase = { workspace = true }
solana-storage-adapter = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }
solana-metrics = { workspace = true }
#stream-cancel = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
#tokio = { version = "~1.14.1", features = ["full"] }
tokio-util = { workspace = true, features = ["codec", "compat"] }

#[dev-dependencies]
#serial_test = { workspace = true }
#solana-net-utils = { workspace = true }
#symlink = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_rpc"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
