[package]
name = "solana-rpc"
description = "Solana RPC"
documentation = "https://docs.rs/solana-rpc"
version = { workspace = true }
authors = { workspace = true }
repository = { workspace = true }
homepage = { workspace = true }
license = { workspace = true }
edition = { workspace = true }

[dependencies]
crossbeam-channel = { workspace = true }
jsonrpc-core = { workspace = true }
jsonrpc-core-client = { workspace = true }
jsonrpc-derive = { workspace = true }
jsonrpc-http-server = { workspace = true }
jsonrpc-server-utils = { workspace = true }
prometheus = { workspace = true }
lazy_static = { workspace = true }
futures = { workspace = true }
libc = { workspace = true }
log = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
serde_json = { workspace = true }

solana-perf = { workspace = true }
solana-rpc-client-api = { workspace = true }
solana-storage-hbase = { workspace = true }
solana-storage-adapter = { workspace = true }
solana-transaction-status = { workspace = true }
solana-version = { workspace = true }
solana-metrics = { workspace = true }

thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = { workspace = true, features = ["codec", "compat"] }

solana-clock = { workspace = true }
solana-validator-exit = { workspace = true }
solana-commitment-config = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-hash = { workspace = true }
solana-transaction-status-client-types = { workspace = true }

clap = { workspace = true }
console = { workspace = true }
num_cpus = { workspace = true }
#solana-clap-utils = { workspace = true }
solana-logger = { workspace = true }
solana-net-utils = { workspace = true }
solana-storage-bigtable = { workspace = true }
symlink = { workspace = true }
rayon = { workspace = true }
solana-epoch-schedule = "3.0.0"
solana-genesis-config = { version = "3.0.0", features = ["serde"] }
solana-reward-info = "3.0.0"
solana-epoch-rewards-hasher = "3.0.0"
tar = { workspace = true }
rand = { workspace = true }
bzip2 = { workspace = true }

[dev-dependencies]
matches = { workspace = true }

[build-dependencies]
rustc_version = { workspace = true }

[target.'cfg(not(target_env = "msvc"))'.dependencies]
jemallocator = { workspace = true }

[target."cfg(unix)".dependencies]
libc = { workspace = true }
signal-hook = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_rpc"

[[bin]]
name = "archival-rpc"
path = "src/main.rs"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]




