[package]
name = "solana-storage-adapter"
version = { workspace = true }
description = "Solana Storage Adapter"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }

[lib]
crate-type = ["lib"]
name = "solana_storage_adapter"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]