[package]
name = "solana-storage-adapter"
version = { workspace = true }
description = "Solana Storage Adapter"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
log = { workspace = true }
solana-sdk = { workspace = true }
solana-transaction-status = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
md5 = { workspace = true }
enum-iterator = "1.2.0"
bzip2 = "0.4.3"
flate2 = "1.0.24"
zstd = "0.11.2"
bincode = "1.3.3"

[lib]
crate-type = ["lib"]
name = "solana_storage_adapter"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]