[package]
name = "solana-storage-hbase"
version = { workspace = true }
description = "Solana Storage HBase"
repository = "https://github.com/solana-labs/solana"
license = "Apache-2.0"
homepage = "https://solana.com/"
edition = "2021"

[dependencies]
async-trait = { workspace = true }
hbase-thrift = { workspace = true }
thrift = { workspace = true }

backoff = { workspace = true }
bincode = { workspace = true }
bytes = { workspace = true }
enum-iterator = { workspace = true }
bzip2 = { workspace = true }
flate2 = { workspace = true }
zstd = { workspace = true }
futures = { workspace = true }
log = { workspace = true }
prost = { workspace = true }
serde = { workspace = true }
serde_derive = { workspace = true }
memcache = { workspace = true }
solana-metrics = { workspace = true }
solana-storage-adapter = { workspace = true }
solana-storage-proto = { workspace = true }
solana-transaction-status = { workspace = true }
thiserror = { workspace = true }
chrono = { workspace = true }
dexter-ipfs-car = { workspace = true }
tokio-util = { workspace = true }
async-compression = { workspace = true }
hdfs-native = { workspace = true }
anyhow = { workspace = true }

solana-clock = { workspace = true }
solana-pubkey = { workspace = true }
solana-signature = { workspace = true }
solana-sysvar = { workspace = true }
solana-message = { workspace = true }
solana-transaction = { workspace = true }
solana-transaction-status-client-types = { workspace = true }
solana-reserved-account-keys = { workspace = true }

[dependencies.tokio]
features = ["rt-multi-thread", "macros", "io-util", "rt", "net", "time"]
version = "1.43.0"

# openssl is a dependency of the goauth and smpl_jwt crates, but explicitly
# declare it here as well to activate the "vendored" feature that builds OpenSSL
# statically...
[target."cfg(not(windows))".dependencies]
openssl = { version = "0.10", features = ["vendored"] }
# ...except on Windows to avoid having to deal with getting CI past a build-time
# Perl dependency
[target."cfg(windows)".dependencies]
openssl = { version = "0.10", features = [] }

[lib]
crate-type = ["lib"]
name = "solana_storage_hbase"

[package.metadata.docs.rs]
targets = ["x86_64-unknown-linux-gnu"]
